[tool.poetry]
name = "test-drweb"
version = "0.1.0"
description = ""
authors = ["rinatrinat <rinatlucke@gmail.com>"]
readme = "README.md"
packages = [{include = "test_drweb"}]

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.lint.dependencies]
isort = "^6.0.1"
flake8 = "^7.2.0"
black = "^25.1.0"
mypy = "^1.15.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]

line-length = 119
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
  | foo.py

)
'''

[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
ignore_missing_imports = true
exclude = 'venv'